--- a/project/html/map.html
+++ b/project/html/map.html
@@ -65,7 +65,13 @@
         <nav class="navbar-sm bg-light sidebar">
 
             <div class="container-fluid" style="height: 30%; margin-top: 10px;">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav">       
+                <li class="nav-item dropdown">
+                    <button type="button" class="nav-link" id="reportAccidentBtn" style="font-weight: bold;">
+                        Report New Accidents
+                    </button>
+                </li>
+
                 <li class="nav-item dropdown">
                     <button class="nav-link dropdown-toggle" type="button" id="searchDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: bold;">
                         Search Accidents
@@ -85,39 +91,8 @@
                             </ul>
                         </li>
                     </ul>
-                </li>                
-                <li class="nav-item dropdown">
-                    <button class="nav-link dropdown-toggle" type="button" id="reportDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: bold;">
-                        Report New Accidents
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="reportDropdown">
-                        <li>
-                            <form id="accidentForm" class="p-3">
-                                <div class="mb-3">
-                                    <label for="date" class="form-label" style="font-size: 13px;">Accident time in format <br> MM/DD/YYYY HH:MM:SS AM/PM</label>
-                                    <input type="text" class="form-control" id="date" name="date" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="inj_total" class="form-label" style="font-size: 13px;">Total injury</label>
-                                    <input type="text" class="form-control" id="inj_total" name="inj_total" required>
-                                </div>
-                                <label for="location" class="form-label" style="font-size: 13px;">Enter or choose location.</label>
-                                <button id="chooseLocationBtn" type="button" class="btn btn-primary btn-sm">Choose Location</button>
-                                <div class="mb-3 row">
-                                    <div class="col-md-6">
-                                        <label for="latitude" class="form-label" style="font-size: 13px;">Latitude</label>
-                                        <input type="text" class="form-control" id="latitude" name="latitude" required>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <label for="longitude" class="form-label" style="font-size: 13px;">Longitude</label>
-                                        <input type="text" class="form-control" id="longitude" name="longitude" required>
-                                    </div>
-                                </div>
-                                <button id="submitBtn" type="submit" class="btn btn-primary" style="margin-top: 10px;">Submit</button>
-                            </form>
-                        </li>
-                    </ul>
-                </li>
+                </li>         
+
                 <li class="nav-item dropdown">
                     <button class="nav-link dropdown-toggle" type="button" id="reportDropdown" data-bs-toggle="dropdown" style="font-weight: bold;">
                         Street Safety Scores
@@ -125,40 +100,9 @@
                     <ul class="dropdown-menu dropdown-submenu" aria-labelledby="searchByLocationDropdown">
                         <li><button class="dropdown-item" type="button" id="scoreBtn">All Streets</button></li>
                         <li class="nav-item dropdown">
-                            <button class="dropdown-item dropdown-toggle" type="button" id="routeDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="dropdown-item " type="button" id="routeBtn">
                                 Custom Routes
                             </button>
-                            <ul class="dropdown-menu dropdown-submenu" aria-labelledby="routeDropdown">
-                                <li>
-                                    <form id="routeForm" class="p-3">
-                                        <label for="orgin" class="form-label" style="font-size: 13px;">Enter or choose origin.</label>
-                                        <button id="originBtn" type="button" class="btn btn-primary btn-sm">Choose Origin</button>
-                                        <div class="mb-3 row">
-                                            <div class="col-md-6">
-                                                <label for="lat1" class="form-label" style="font-size: 13px;">Latitude</label>
-                                                <input type="text" class="form-control" id="lat1" name="lat1" required>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="lnt1" class="form-label" style="font-size: 13px;">Longitude</label>
-                                                <input type="text" class="form-control" id="lnt1" name="lnt1" required>
-                                            </div>
-                                        </div>
-                                        <label for="destination" class="form-label" style="font-size: 13px;">Enter or choose destination.</label>
-                                        <button id="destinationBtn" type="button" class="btn btn-primary btn-sm">Choose Destination</button>
-                                        <div class="mb-3 row">
-                                            <div class="col-md-6">
-                                                <label for="lat2" class="form-label" style="font-size: 13px;">Latitude</label>
-                                                <input type="text" class="form-control" id="lat2" name="lat2" required>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <label for="lnt2" class="form-label" style="font-size: 13px;">Longitude</label>
-                                                <input type="text" class="form-control" id="lnt2" name="lnt2" required>
-                                            </div>
-                                        </div>
-                                        <button id="submitRouteBtn" type="submit" class="btn btn-primary" style="margin-top: 10px;">Submit</button>
-                                    </form>
-                                </li>
-                            </ul>
                         </li>
                     </ul>
                 </li>
@@ -183,7 +127,113 @@
         </nav>
 
         <!-- map -->
-        <div id="map"></div>
+        <div id="map">
+            <!-- Subwindow to show form on top left corner -->
+            <div id="accidentFormWindow" style="position: absolute; top: 1vh; left: 3vw; background-color: white; padding: 10px; border: 1px solid #ccc; display: none; z-index: 1000;">
+                <form id="accidentForm">
+                    <h5 style="font-size: 14px; font-weight: bold;">Report Form</h5>
+
+                    <div class="mb-3">
+                        <label for="date" class="form-label" style="font-size: 13px;">Accident time in format <br> MM/DD/YYYY HH:MM:SS AM/PM</label>
+                        <input type="text" class="form-control" id="date" name="date" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="inj_total" class="form-label" style="font-size: 13px;">Total injury</label>
+                        <input type="text" class="form-control" id="inj_total" name="inj_total" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="prim_contr" class="form-label" style="font-size: 13px;">Primary contributor</label>
+                        <input type="text" class="form-control" id="prim_contr" name="prim_contr" required>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="traffic_co" class="form-label" style="font-size: 13px;">Traffic control type</label>
+                        <input type="text" class="form-control" id="traffic_co" name="traffic_co" required>
+                    </div>
+
+                    <label for="location" class="form-label" style="font-size: 13px;">Enter or choose location.</label>
+                    <button id="chooseLocationBtn" type="button" class="btn btn-primary btn-sm">Choose Location</button>
+                    <div class="mb-3 row">
+                        <div class="col-md-6">
+                            <label for="latitude" class="form-label" style="font-size: 13px;">Latitude</label>
+                            <input type="text" class="form-control" id="latitude" name="latitude" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="longitude" class="form-label" style="font-size: 13px;">Longitude</label>
+                            <input type="text" class="form-control" id="longitude" name="longitude" required>
+                        </div>
+                    </div>
+                    <button id="submitBtn" type="submit" class="btn btn-primary btn-sm">Submit</button>
+                    <button id="closeFormBtn" type="button" class="btn btn-secondary btn-sm">Close</button>
+                </form>
+            </div>
+
+            <div id="routeFormWindow" style="position: absolute; top: 1vh; left: 3vw; background-color: white; padding: 10px; border: 1px solid #ccc; display: none; z-index: 1000;">
+                <form id="routeForm">
+                    <h5 style="font-size: 14px; font-weight: bold;">Route Form</h5>
+
+                    <label for="orgin" class="form-label" style="font-size: 13px;">Enter or choose origin.</label><br>
+                    <button id="originBtn" type="button" class="btn btn-primary btn-sm">Choose Origin</button>
+                    <div class="mb-3 row">
+                        <div class="col-md-6">
+                            <label for="lat1" class="form-label" style="font-size: 13px;">Latitude</label>
+                            <input type="text" class="form-control" id="lat1" name="lat1" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="lnt1" class="form-label" style="font-size: 13px;">Longitude</label>
+                            <input type="text" class="form-control" id="lnt1" name="lnt1" required>
+                        </div>
+                    </div>
+                    <label for="destination" class="form-label" style="font-size: 13px;">Enter or choose destination.</label><br>
+                    <button id="destinationBtn" type="button" class="btn btn-primary btn-sm">Choose Destination</button>
+                    <div class="mb-3 row">
+                        <div class="col-md-6">
+                            <label for="lat2" class="form-label" style="font-size: 13px;">Latitude</label>
+                            <input type="text" class="form-control" id="lat2" name="lat2" required>
+                        </div>
+                        <div class="col-md-6">
+                            <label for="lnt2" class="form-label" style="font-size: 13px;">Longitude</label>
+                            <input type="text" class="form-control" id="lnt2" name="lnt2" required>
+                        </div>
+                    </div>
+                    <button id="submitBtn" type="submit" class="btn btn-primary btn-sm">Submit</button>
+                    <button id="closeRouteFormBtn" type="button" class="btn btn-secondary btn-sm">Close</button>
+                </form>
+            </div>
+        </div>
+        <script>
+            // toggle the subwindow
+            document.getElementById('reportAccidentBtn').addEventListener('click', function() {
+                var formWindow = document.getElementById('accidentFormWindow');
+                
+                if (formWindow.style.display === 'none' || formWindow.style.display === '') {
+                    formWindow.style.display = 'block';
+                } else {
+                    formWindow.style.display = 'none';
+                }
+            });
+            // close the subwindow
+            document.getElementById('closeFormBtn').addEventListener('click', function() {
+                document.getElementById('accidentFormWindow').style.display = 'none';
+            });
+
+            // toggle the subwindow
+            document.getElementById('routeBtn').addEventListener('click', function() {
+                var formWindow = document.getElementById('routeFormWindow');
+                
+                if (formWindow.style.display === 'none' || formWindow.style.display === '') {
+                    formWindow.style.display = 'block';
+                } else {
+                    formWindow.style.display = 'none';
+                }
+            });
+            // close the subwindow
+            document.getElementById('closeRouteFormBtn').addEventListener('click', function() {
+                document.getElementById('routeFormWindow').style.display = 'none';
+            });
+        </script>
         <script src="map.js"></script>
         <script src="buttons.js"></script>
 
