--- a/project/html/index.html
+++ b/project/html/index.html
@@ -55,15 +55,15 @@
             </div>
         
             <!-- The slideshow/carousel -->
-            <div class="carousel-inner" style="height:750px;">
+            <div class="carousel-inner" style="height:100vh;">
                 <div class="carousel-item active">
                     <img src="carousel1.jpg" alt="1" class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Traffic Safety Database</h1>
                         <h3>City of Chicago</h3>
-                        <p style="font-size: 17px; margin-top: 20px">Witness the impact of traffic accidents across Chicago through detailed visualizations.</p>
+                        <p style="font-size: 17px; margin-top: 3vh">Witness the impact of traffic accidents across Chicago through detailed visualizations.</p>
                         <a href="#explore" style="text-decoration: none;">
-                            <button type="button" class="btn btn-primary btn-lg" style="margin-top: 40px;">Explore Data</button>
+                            <button type="button" class="btn btn-primary btn-lg" style="margin-top: 5vh;">Explore Data</button>
                         </a>
                     </div>
                 </div>
@@ -72,9 +72,9 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Traffic Safety Database</h1>
                         <h3>City of Chicago</h3>
-                        <p style="font-size: 17px; margin-top: 20px">Explore real-time data on traffic incidents to understand their effects on city streets.</p>
+                        <p style="font-size: 17px; margin-top: 3vh">Explore real-time data on traffic incidents to understand their effects on city streets.</p>
                         <a href="#explore" style="text-decoration: none;">
-                            <button type="button" class="btn btn-primary btn-lg" style="margin-top: 40px;">Explore Data</button>
+                            <button type="button" class="btn btn-primary btn-lg" style="margin-top: 5vh;">Explore Data</button>
                         </a>
                     </div>
                 </div>
@@ -83,9 +83,9 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Traffic Safety Database</h1>
                         <h3>City of Chicago</h3>
-                        <p style="font-size: 17px; margin-top: 20px">See how traffic patterns and accident hotspots shape Chicago's road safety.</p>
+                        <p style="font-size: 17px; margin-top: 3vh">See how traffic patterns and accident hotspots shape Chicago's road safety.</p>
                         <a href="#explore" style="text-decoration: none;">
-                            <button type="button" class="btn btn-primary btn-lg" style="margin-top: 40px;">Explore Data</button>
+                            <button type="button" class="btn btn-primary btn-lg" style="margin-top: 5vh;">Explore Data</button>
                         </a>
                     </div>
                 </div>
