--- a/project/html/map.html
+++ b/project/html/map.html
@@ -78,7 +78,7 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="searchDropdown">
                         <li>
-                            <button id="searchByDateBtn" class="dropdown-item" type="button">1. Select Date Range</button>
+                            <button id="searchByDateBtn" class="dropdown-item" type="button">1. Select a Date Range</button>
                             <input type="text" id="dateRangePicker" style="display:none;" placeholder="Select Date Range">                        
                         </li>
                         <li class="nav-item dropdown">
